# TensorRTWrapper

./: CMakeLists.txt  README.md  compile.bat
app/: main.cpp
lib/include/: inference_engine.hpp  logger.hpp
lib/src/: inference_engine.cpp  logger.cpp
